--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             <h2>OUR PRODUCT</h2><br>
         </div>
         <div class="show">
-            <div class="Show_wrapper 1">
+            <div class="Show_wrapper  ">
                 <img src="logo1.png" alt="">
                 <h3>SEO</h3>
                 <p>It is a long establishes <br>fact that a reader will <br>be distracted by the</p>
             </div>
-            <div class="Show_wrapper 2">
+            <div class="Show_wrapper ">
                 <img src="logo1.png" alt="">
                 <h3>BRANDING</h3>
                 <p>It is a long establishes <br>fact that a reader will <br>be distracted by the</p>
             </div>
-            <div class="Show_wrapper 3">
+            <div class="Show_wrapper ">
                 <img src="logo1.png" alt="">
                 <h3>LOGO</h3>
                 <p>It is a long establishes <br>fact that a reader will <br>be distracted by the</p>
@@ -85,11 +85,12 @@
             <li><a href="">Product</a></li>
             <li><a href="">Pricing</a></li>
             <li><a href="">Contact</a></li>
+            <br>
         </div>
         <div class="text_dis">
             <h3>Contact Us</h3><br>
             <p>vmchauptit@gmail.com</p><br>
-            <p>0355730575</p>
+            <p>0355730575</p><br><br><br>
         </div>
     </div>
     <div class="footer">
